system/configs/staging/traefik/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &host traefik.staging.fanen.dk
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.staging.fanen.dk`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
